--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,22 @@
 
 :root {
   scroll-behavior: smooth;
+  --primary-color: #0f314d;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: #f6f9ff;
-  color: #444444;
+  background: #fff;
+  color: #fff;
 }
 
 a {
-  color: #4154f1;
+  color: #0f314d;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: #0f314d;
   text-decoration: none;
 }
 
@@ -41,6 +42,15 @@ h6 {
   #main {
     padding: 20px;
   }
+}
+
+.btn-primary {
+  background-color: #0f314d;
+  border-color: #0f314d;
+}
+
+.bg-primary {
+  background-color: #0f314d;
 }
 
 /*--------------------------------------------------------------
@@ -172,8 +182,8 @@ h6 {
 
 /* Light Backgrounds */
 .bg-primary-light {
-  background-color: #cfe2ff;
-  border-color: #cfe2ff;
+  background-color: #fff;
+  border-color: #fff;
 }
 
 .bg-secondary-light {
@@ -272,7 +282,7 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #012970;
+  color: #fff;
   background-color: #f6f9ff;
 }
 
@@ -284,7 +294,7 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  color: #fff;
 }
 
 .accordion-flush .accordion-body {
@@ -327,18 +337,18 @@ h6 {
 .nav-tabs-bordered .nav-link {
   margin-bottom: -2px;
   border: none;
-  color: #2c384e;
+  color: #0f314d;
 }
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  color: #0f314d;
 }
 
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  color: #fff;
+  border-bottom: 2px solid #fff;
 }
 
 /*--------------------------------------------------------------
@@ -371,7 +381,7 @@ h6 {
   z-index: 997;
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #0f314d;
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -381,7 +391,7 @@ h6 {
   font-size: 32px;
   padding-left: 10px;
   cursor: pointer;
-  color: #012970;
+  color: #fff;
 }
 
 .header .search-bar {
@@ -464,7 +474,7 @@ h6 {
 }
 
 .header-nav .nav-profile {
-  color: #012970;
+  color: #fff;
 }
 
 .header-nav .nav-profile img {
@@ -538,13 +548,13 @@ h6 {
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #444444;
+  color: #fff;
 }
 
 .header-nav .messages .message-item p {
   font-size: 13px;
   margin-bottom: 3px;
-  color: #919191;
+  color: #fff;
 }
 
 .header-nav .messages .message-item:hover {
@@ -561,7 +571,7 @@ h6 {
   font-size: 18px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #444444;
+  color: #fff;
 }
 
 .header-nav .profile .dropdown-header span {
@@ -697,12 +707,12 @@ h6 {
 }
 
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
+  color: #0f314d;
   background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  color: #1b30f0;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -740,7 +750,7 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: #fff;
 }
 
 .sidebar-nav .nav-content a.active i {
